# CVPipeline

./: .gitignore  README.md  client.py  download-models.sh  flow.py
detector/: README.md  detector.yml  main.py  pyproject.toml
detector/executor/: detector.py
detector/models/: common.py  yolo.py
detector/utils/: get_classes.py  torch_utils.py
utils/: metrics_timer.py
